--- a/private/templates/default/views/layout.html
+++ b/private/templates/default/views/layout.html
@@ -118,7 +118,7 @@
   </div>
  </div>
  <div id='footer'>
-  {{include "../private/templates/%s/views/footer.html" % s3.theme}}
+  {{include "../private/templates/%s/views/footer.html" % response.s3.theme}}
   {{if session.s3.debug:}}{{=s3.toolbar()}}{{pass}}
  </div>
 {{pass}}
