Updated debate add form and some icons according to the new markup

--- a/src/apps/ecidadania/debate/templates/debate/debate_add.html
+++ b/src/apps/ecidadania/debate/templates/debate/debate_add.html
@@ -41,6 +41,22 @@ automatically if found in the data models.
         <h3>{% trans "Edit debate" %} {{ form.title.value }}</h3>
     {% else %}
         <h3>{% trans "Create new debate" %}</h3>
+        <div class="modal hide fade" id="myModal">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">×</button>
+                <h3>{% trans "How to create a debate" %}</h3>
+            </div>
+            <div class="modal-body">
+                <p>{% blocktrans %}To create a debate, you must fill the fields with any criteria necessary for it,
+                    in this docuemntation page we have an example of a debate that you can follow to create yours.
+                    For the rest of the fields, just follow their respective instructions.{% endblocktrans %}
+                </p>
+            </div>
+            <div class="modal-footer">
+                <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
+            </div>
+        </div>
+        <br>
     {% endif %}
 
 <div class="row">
@@ -57,6 +73,7 @@ automatically if found in the data models.
 
     <div id="debate">
 
+        <a data-toggle="modal" id="debate-tutorial" href="#myModal" ><img src="{{ STATIC_URL }}/assets/icons/question.png" /></a>
         <form class="form-horizontal" id="ajaxform" enctype="" action="" method="post">{% csrf_token %}
             <table id="debate{{ debateid }}" cellspacing="0" cellpadding="0" border="0">
                 <thead>
