--- a/src/e_cidadania/static_files/css/screen.css
+++ b/src/e_cidadania/static_files/css/screen.css
@@ -476,7 +476,7 @@ tbody td.criteria-title, tbody th.criteria-title {
 }
 
 .mine {
-    background-color: #CCC; /*#FFFF99;*/
+    background-color: #FFFF99;
 }
 
 .note-alpha {
