--- a/src/core/spaces/templates/spaces/space_form.html
+++ b/src/core/spaces/templates/spaces/space_form.html
@@ -186,6 +186,25 @@ tempalte shows the help_text automatically if found in the data models.
                         {% endif %}
                     </div>
                 </div>
+
+                <div class="control-group {% if form.admins.errors %}error{% endif%}">
+                    <label>{{ form.admins.label }}</label>
+                    <div class="controls">
+                        <div class="input-prepend">
+                            {{ form.admins }}
+                            {% if form.admins.help_text %}
+                                <span class="add-on"><a href="#" rel="tooltip" title="{{ form.admins.help_text }}"><i class="icon-question-sign"></i></a></span>
+                            {% endif %}
+                        </div>
+                        {% if form.admins.errors %}
+                            <p class="help-block">
+                                {% for error in form.admins.errors %}
+                                    {{ error|escape }}
+                                {% endfor %}
+                            </p>
+                        {% endif %}
+                    </div>
+                </div>
                 {% endif %}
 
                 <div class="control-group {% if form.public.errors %}error{% endif%}">
