--- a/views/_list_create.html
+++ b/views/_list_create.html
@@ -20,6 +20,7 @@
 <div class='form-container'>
 {{try:}}{{=form}}{{except:}}{{pass}}
 </div>
+</div>
 {{try:}}{{items = items}}
 <div id='table-container'>
 {{include "formats.html"}}
