Fix the ADAT import of 24H (was missing priority question)

--- a/static/themes/default/shortcut.css
+++ b/static/themes/default/shortcut.css
@@ -16,6 +16,7 @@
    css-discuss.incutio.com/wiki/Screenreader_Visibility */
 .hide {
     display: none;
+    visibility: hidden;
 }
 
 /* Hide only visually, but have it available for screenreaders
