--- a/views/asset/index.html
+++ b/views/asset/index.html
@@ -1,17 +1,20 @@
 {{extend "layout.html"}}
 <div id='home'>
-<h2>{{=T("Asset Management")}}</h2>
+<h2>{{=module_name}}</h2>
 <p>{{=T("Assets are resources which are not consumable but are expected back, so they need tracking.")}}</p>
 <h3>{{=T("Assets")}}:</h3>
 <ul>
-  <li><a href='{{=URL(c="asset", f="asset", args="create")}}'>{{=T("Create New Asset")}}</a>
-  <li><a href='{{=URL(c="asset", f="asset")}}'>{{=T("List All Assets")}}</a>
-  <li><a href='{{=URL(c="asset", f="asset", args="search")}}'>{{=T("Search Assets")}}</a>
-  <li><a href='{{=URL(c="asset", f="asset", args="import")}}'>{{=T("Import Assets")}}</a>
+  <li><a href='{{=URL(c="asset", f="asset", args="create")}}'>{{=T("New")}}</a>
+  <li><a href='{{=URL(c="asset", f="asset")}}'>{{=T("List")}}</a>
+  <li><a href='{{=URL(c="asset", f="asset", args="search")}}'>{{=T("Search")}}</a>
 </ul>
-<h3>{{=T("Catalog Items")}}:</h3>
+<h3>{{=T("Items")}}:</h3>
 <ul>
-  <li><a href='{{=URL(c="asset", f="item", args="create")}}'>{{=T("Create New Catalog Item")}}</a>
-  <li><a href='{{=URL(c="asset", f="item")}}'>{{=T("List All Catalog Items")}}</a>
+  <li><a href='{{=URL(c="asset", f="item", args="create")}}'>{{=T("New")}}</a>
+  <li><a href='{{=URL(c="asset", f="item")}}'>{{=T("List")}}</a>
+</ul>
+<h3>{{=T("Reports")}}:</h3>
+<ul>
+  <li><a href='{{=URL(c="asset", f="asset", args="report")}}'>{{=T("Assets")}}</a>
 </ul>
 </div>
